--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,234 +1,199 @@
 <button onclick="scriptCall()" id="scriptCall" style="display: none"></button>
 <div class="main-search-container dark-overlay">
-	<div class="main-search-inner">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<h2>Find Nearby Attractions</h2>
-					<h4>Expolore top-rated attractions, activities and more</h4>
-					<div class="main-search-input">
-						<div class="main-search-input-item">
-							<input type="text" placeholder="What are you looking for?" value=""/>
-						</div>
-						<div class="main-search-input-item location">
-							<input type="text" placeholder="Location" value=""/>
-							<a href="#"><i class="fa fa-dot-circle-o"></i></a>
-						</div>
-						<div class="main-search-input-item">
-							<select data-placeholder="All Categories" class="chosen-select" >
-								<option>All Categories</option>	
-								<option>Shops</option>
-								<option>Hotels</option>
-								<option>Restaurants</option>
-								<option>Fitness</option>
-								<option>Events</option>
-							</select>
-						</div>
-						<button class="button" onclick="window.location.href='listings-half-screen-map-list.html'">Search</button>
-					</div>
-				</div>
-			</div>
-		</div>
+    <div class="main-search-inner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Find Nearby Attractions</h2>
+                    <h4>Expolore top-rated attractions, activities and more</h4>
+                    <div class="main-search-input">
+                        <div class="main-search-input-item">
+                            <input type="text" placeholder="What are you looking for?" value="" />
+                        </div>
+                        <div class="main-search-input-item location">
+                            <input type="text" placeholder="Location" value="" />
+                            <a href="#">
+                                <i class="fa fa-dot-circle-o"></i>
+                            </a>
+                        </div>
+                        <div class="main-search-input-item">
+                            <select data-placeholder="All Categories" class="chosen-select">
+                                <option>All Categories</option>
+                                <option>Shops</option>
+                                <option>Hotels</option>
+                                <option>Restaurants</option>
+                                <option>Fitness</option>
+                                <option>Events</option>
+                            </select>
+                        </div>
+                        <button class="button" onclick="window.location.href='listings-half-screen-map-list.html'">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-	<div class="video-container">
-		<video poster="assets/images/main-search-video-poster.jpg" loop autoplay muted>
-			<source src="assets/images/main-search-video.mp4" type="video/mp4">
-		</video>
-	</div>
+    <div class="video-container">
+        <video poster="../assets/images/main-search-video-poster.jpg" loop autoplay muted>
+            <source src="../assets/images/main-search-video.mp4" type="video/mp4">
+        </video>
+    </div>
 </div>
 <div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h3 class="headline centered margin-top-75">
-				Browse Categories
-			</h3>
-		</div>
-	</div>
-</div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="categories-boxes-container margin-top-5 margin-bottom-30">
-				<a href="listings-list-with-sidebar.html" class="category-small-box">
-					<i class="im im-icon-Hamburger"></i>
-					<h4>Eat & Drink</h4>
-				</a>
-				<a href="listings-list-with-sidebar.html" class="category-small-box">
-					<i class="im  im-icon-Sleeping"></i>
-					<h4>Hotels</h4>
-				</a>
-				<a href="listings-list-with-sidebar.html" class="category-small-box">
-					<i class="im im-icon-Shopping-Bag"></i>
-					<h4>Shops</h4>
-				</a>
-				<a href="listings-list-with-sidebar.html" class="category-small-box">
-					<i class="im im-icon-Cocktail"></i>
-					<h4>Nightlife</h4>
-				</a>
-				<a href="listings-list-with-sidebar.html" class="category-small-box">
-					<i class="im im-icon-Electric-Guitar"></i>
-					<h4>Events</h4>
-				</a>
-				<a href="listings-list-with-sidebar.html" class="category-small-box">
-					<i class="im im-icon-Dumbbell"></i>
-					<h4>Fitness</h4>
-				</a>
-			</div>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h2 class="headline centered margin-top-80">
+                Plan The Vacation of Your Dreams
+                <span class="margin-top-25">Explore some of the best tips from around the world from our partners and friends. Discover some of the most
+                    popular listings in Sydney.</span>
+            </h2>
+        </div>
+    </div>
+    <div class="row icons-container">
+        <div class="col-md-4">
+            <div class="icon-box-2 with-line">
+                <i class="im im-icon-Map2"></i>
+                <h3>Find Interesting Place</h3>
+                <p>Proin dapibus nisl ornare diam varius tempus. Aenean a quam luctus, finibus tellus ut, convallis eros sollicitudin
+                    turpis.
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="icon-box-2 with-line">
+                <i class="im im-icon-Mail-withAtSign"></i>
+                <h3>Contact a Few Owners</h3>
+                <p>Maecenas pulvinar, risus in facilisis dignissim, quam nisi hendrerit nulla, id vestibulum metus nullam viverra
+                    porta purus.
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="icon-box-2">
+                <i class="im im-icon-Checked-User"></i>
+                <h3>Make a Reservation</h3>
+                <p>Faucibus ante, in porttitor tellus blandit et. Phasellus tincidunt metus lectus sollicitudin feugiat pharetra
+                    consectetur.
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
 <section class="fullwidth margin-top-65 padding-top-75 padding-bottom-70" data-background-color="#f8f8f8">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="headline centered margin-bottom-45">
+                    Most Well received Places
+                    <span>Discover top-rated local businesses</span>
+                </h3>
+            </div>
+        </div>
+    </div>
+    <div class="simple-fw-slick-carousel dots-nav">
+        <!-- Listing Item -->
+        <div class="fw-carousel-item" *ngFor="let location of locations">
+            <div>
+                <a [routerLink]="location.type == 'restaurant' ? ['/restaurants', location.id] : ['/hotels', location.id]" class="listing-item-container compact">
+                    <div class="listing-item">
+                        <div *ngIf="location.photo; else noPhotoFound">
+                            <img *ngIf="location.type == 'restaurant'" src="assets/images/restaurants/{{location.photo}}" alt="">
+                            <img *ngIf="location.type == 'hotel'" src="assets/images/hotels/{{location.photo}}" alt="">
+                        </div>
+                        <ng-template #noPhotoFound>
+                            <img src="assets/images/listing-item-01.jpg" alt="">
+                        </ng-template>
 
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<h3 class="headline centered margin-bottom-45">
-					Most Visited Places
-					<span>Discover top-rated local businesses</span>
-				</h3>
-			</div>
-		</div>
-	</div>
-	<div class="simple-fw-slick-carousel dots-nav">
-		<div class="fw-carousel-item">
-			<a href="listings-single-page.html" class="listing-item-container compact">
-				<div class="listing-item">
-					<img src="assets/images/listing-item-01.jpg" alt="">
-
-					<div class="listing-badge now-open">Now Open</div>
-
-					<div class="listing-item-content">
-						<div class="numerical-rating" data-rating="3.5"></div>
-						<h3>Tom's Restaurant</h3>
-						<span>964 School Street, New York</span>
-					</div>
-					<span class="like-icon"></span>
-				</div>
-			</a>
-		</div>
-		<div class="fw-carousel-item">
-			<a href="listings-single-page.html" class="listing-item-container compact">
-				<div class="listing-item">
-					<img src="assets/images/listing-item-02.jpg" alt="">
-					<div class="listing-item-details">
-						<ul>
-							<li>Friday, August 10</li>
-						</ul>
-					</div>
-					<div class="listing-item-content">
-						<div class="numerical-rating" data-rating="5.0"></div>
-						<h3>Sticky Band</h3>
-						<span>Bishop Avenue, New York</span>
-					</div>
-					<span class="like-icon"></span>
-				</div>
-			</a>
-		</div>
-		<div class="fw-carousel-item">
-			<a href="listings-single-page.html" class="listing-item-container compact">
-				<div class="listing-item">
-					<img src="assets/images/listing-item-03.jpg" alt="">
-					<div class="listing-item-details">
-						<ul>
-							<li>Starting from $59 per night</li>
-						</ul>
-					</div>
-					<div class="listing-item-content">
-						<div class="numerical-rating" data-rating="2.0"></div>
-						<h3>Hotel Govendor</h3>
-						<span>778 Country Street, New York</span>
-					</div>
-					<span class="like-icon"></span>
-				</div>
-			</a>
-		</div>
-		<div class="fw-carousel-item">
-			<a href="listings-single-page.html" class="listing-item-container compact">
-				<div class="listing-item">
-					<img src="assets/images/listing-item-04.jpg" alt="">
-
-					<div class="listing-badge now-open">Now Open</div>
-
-					<div class="listing-item-content">
-						<div class="numerical-rating" data-rating="5.0"></div>
-						<h3>Burger House</h3>
-						<span>2726 Shinn Street, New York</span>
-					</div>
-					<span class="like-icon"></span>
-				</div>
-			</a>
-		</div>
-		<div class="fw-carousel-item">
-			<a href="listings-single-page.html" class="listing-item-container compact">
-				<div class="listing-item">
-					<img src="assets/images/listing-item-05.jpg" alt="">
-					<div class="listing-item-content">
-						<div class="numerical-rating" data-rating="3.5"></div>
-						<h3>Airport</h3>
-						<span>1512 Duncan Avenue, New York</span>
-					</div>
-					<span class="like-icon"></span>
-				</div>
-			</a>
-		</div>
-		<div class="fw-carousel-item">
-			<a href="listings-single-page.html" class="listing-item-container compact">
-				<div class="listing-item">
-					<img src="assets/images/listing-item-06.jpg" alt="">
-					<div class="listing-badge now-closed">Now Closed</div>
-					<div class="listing-item-content">
-						<div class="numerical-rating" data-rating="4.5"></div>
-						<h3>Think Coffee</h3>
-						<span>215 Terry Lane, New York</span>
-					</div>
-					<span class="like-icon"></span>
-				</div>
-			</a>
-		</div>
-	</div>
+                        <div *ngIf="location.type == 'restaurant' && location.open" class="listing-badge now-open">Now Open</div>
+                        <div *ngIf="location.type == 'restaurant' && !location.open" class="listing-badge now-closed">Now Closed</div>
+                        <div class="listing-item-content">
+                                <div class="numerical-rating" attr.data-rating="{{location.rating | number : '1.2-2'}}" [ngClass]="{
+                                    'low':location.rating < 3,
+                                    'mid':location.rating >= 3 && location.rating < 4,
+                                    'high':location.rating >= 4 && location.rating <= 5
+                                  }"></div>
+                            <h3>{{location.name}}</h3>
+                            <span>{{location.adresse}}</span>
+                        </div>
+                        <span class="like-icon"></span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
 </section>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h3 class="headline centered margin-bottom-35 margin-top-70">Popular Cities <span>Browse listings in popular places</span></h3>
-		</div>
-		<div class="col-md-4">
-			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="assets/images/popular-location-01.jpg">
-				<div class="img-box-content visible">
-					<h4>New York </h4>
-					<span>14 Listings</span>
-				</div>
-			</a>
-		</div>	
-		<div class="col-md-8">
-			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="assets/images/popular-location-02.jpg">
-				<div class="img-box-content visible">
-					<h4>Los Angeles</h4>
-					<span>24 Listings</span>
-				</div>
-			</a>
-		</div>	
-		<div class="col-md-8">
-			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="assets/images/popular-location-03.jpg">
-				<div class="img-box-content visible">
-					<h4>San Francisco </h4>
-					<span>12 Listings</span>
-				</div>
-			</a>
-		</div>	
-		<div class="col-md-4">
-			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="assets/images/popular-location-04.jpg">
-				<div class="img-box-content visible">
-					<h4>Miami</h4>
-					<span>9 Listings</span>
-				</div>
-			</a>
-		</div>
-	</div>
-</div>
-<a href="listings-half-screen-map-list.html" class="flip-banner parallax margin-top-65" data-background="assets/images/slider-bg-02.jpg" data-color="#f91942" data-color-opacity="0.85" data-img-width="2500" data-img-height="1666">
-	<div class="flip-banner-content">
-		<h2 class="flip-visible">Expolore top-rated attractions nearby</h2>
-		<h2 class="flip-hidden">Browse Listings <i class="sl sl-icon-arrow-right"></i></h2>
-	</div>
-</a>
+<section class="fullwidth padding-top-75 padding-bottom-75" data-background-color="#fff">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="headline centered margin-bottom-45">
+                    From The Blog
+                </h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 testClass" *ngFor="let article of articles; let i = index">
+                <a href="pages-blog-post.html" class="blog-compact-item-container">
+                    <div class="blog-compact-item">
+                        <img src="assets/images/aticles/{{article.photo}}" alt="">
+
+                        <div class="blog-compact-item-content">
+                            <ul class="blog-post-tags">
+                                <li>{{article.inserted | date:'longDate'}}</li>
+                            </ul>
+                            <h3>{{article.titre}}</h3>
+                            <p [innerHTML]="(article.texte | slice:0:100) +'...'"></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-12 centered-content">
+                <a [routerLink]="['/articles']" class="button border margin-top-10">View Blog</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="fullwidth border-top margin-top-40 margin-bottom-0 padding-top-60 padding-bottom-65" data-background-color="#f8f8f8">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="headline centered margin-bottom-40 margin-top-10">Companies We've Worked With
+                    <span>We can assist you with your innovation or commercialisation journey!</span>
+                </h3>
+            </div>
+
+            <div class="col-md-12">
+                <div class="logo-slick-carousel dot-navigation">
+
+                    <div class="item">
+                        <img src="../assets/images/logo-01.png" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="../assets/images/logo-02.png" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="../assets/images/logo-03.png" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="../assets/images/logo-04.png" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="../assets/images/logo-05.png" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="../assets/images/logo-06.png" alt="">
+                    </div>
+
+                    <div class="item">
+                        <img src="../assets/images/logo-07.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
