--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -134,7 +134,7 @@
             <div class="col-md-4 testClass" *ngFor="let article of articles; let i = index">
                 <a href="pages-blog-post.html" class="blog-compact-item-container">
                     <div class="blog-compact-item">
-                        <img src="assets/images/aticles/{{article.photo}}" alt="">
+                        <img src="assets/images/articles/{{article.photo}}" alt="">
 
                         <div class="blog-compact-item-content">
                             <ul class="blog-post-tags">
