--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,10 +1,14 @@
 .error{
     color: red;
-    font-size: 14px;
+    font-size: 14px
 }
 .has-success:focus{
     border-color: green
 }
 .has-danger:focus{
     border-color: red
+}
+
+body {
+    padding: 2em
 }
