Add comment restaurant.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -60,7 +60,7 @@
                                 </li>
                                 <li>
                                     <a>
-                                        <i class="fa fa-calendar-check-o"></i> Bookmarks</a>
+                                        <i class="fa fa-bookmark-o"></i> Bookmarks</a>
                                 </li>
                                 <li>
                                     <a (click)="logout()">
